# internal/app/swagger/swagger.json
@@ -747,9 +747,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "状态(1:启用 2:禁用)",
-                        "name": "status",
+                        "type": "boolean",
+                        "description": "是否有效",
+                        "name": "is_active",
                         "in": "query"
                     },
                     {
@@ -866,9 +866,9 @@
                 "summary": "查询菜单树",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "状态(1:启用 2:禁用)",
-                        "name": "status",
+                        "type": "boolean",
+                        "description": "是否有效",
+                        "name": "is_active",
                         "in": "query"
                     },
                     {
@@ -1455,9 +1455,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "状态(1:启用 2:禁用)",
-                        "name": "status",
+                        "type": "boolean",
+                        "description": "是否有效",
+                        "name": "is_active",
                         "in": "query"
                     }
                 ],
@@ -1568,9 +1568,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "状态(1:启用 2:禁用)",
-                        "name": "status",
+                        "type": "boolean",
+                        "description": "是否有效",
+                        "name": "is_active",
                         "in": "query"
                     }
                 ],
@@ -1885,9 +1885,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "状态(1:启用 2:停用)",
-                        "name": "status",
+                        "type": "boolean",
+                        "description": "是否有效",
+                        "name": "is_active",
                         "in": "query"
                     }
                 ],
@@ -2212,8 +2212,8 @@
             "type": "object",
             "required": [
                 "code",
-                "name",
-                "status"
+                "is_active",
+                "name"
             ],
             "properties": {
                 "code": {
@@ -2232,6 +2232,10 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
+                },
                 "memo": {
                     "description": "备注",
                     "type": "string"
@@ -2243,12 +2247,6 @@
                 "sort": {
                     "type": "integer"
                 },
-                "status": {
-                    "description": "状态(1:启用 2:停用)",
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 1
-                },
                 "updated_at": {
                     "description": "更新时间",
                     "type": "string"
@@ -2258,10 +2256,10 @@
         "schema.Dict": {
             "type": "object",
             "required": [
+                "is_active",
                 "items",
                 "name_cn",
-                "name_en",
-                "status"
+                "name_en"
             ],
             "properties": {
                 "created_at": {
@@ -2275,6 +2273,10 @@
                 "id": {
                     "description": "唯一标识",
                     "type": "string"
+                },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
                 },
                 "items": {
                     "description": "字典项列表",
@@ -2299,10 +2301,6 @@
                     "description": "排序",
                     "type": "integer"
                 },
-                "status": {
-                    "description": "状态",
-                    "type": "integer"
-                },
                 "updated_at": {
                     "description": "更新时间",
                     "type": "string"
@@ -2313,8 +2311,8 @@
             "type": "object",
             "required": [
                 "dict_id",
+                "is_active",
                 "label",
-                "status",
                 "value"
             ],
             "properties": {
@@ -2334,6 +2332,10 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
+                },
                 "label": {
                     "description": "显示值",
                     "type": "string"
@@ -2344,10 +2346,6 @@
                 },
                 "sort": {
                     "description": "排序",
-                    "type": "integer"
-                },
-                "status": {
-                    "description": "状态(1:启用 2:禁用)",
                     "type": "integer"
                 },
                 "updated_at": {
@@ -2406,8 +2404,8 @@
         "schema.Menu": {
             "type": "object",
             "required": [
-                "name",
-                "status"
+                "is_active",
+                "name"
             ],
             "properties": {
                 "actions": {
@@ -2433,9 +2431,21 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
+                },
+                "is_leaf": {
+                    "description": "是否子叶",
+                    "type": "boolean"
+                },
                 "is_show": {
                     "description": "是否显示",
                     "type": "boolean"
+                },
+                "level": {
+                    "description": "层级",
+                    "type": "integer"
                 },
                 "memo": {
                     "description": "备注",
@@ -2460,12 +2470,6 @@
                 "sort": {
                     "description": "排序值",
                     "type": "integer"
-                },
-                "status": {
-                    "description": "状态(1:启用 2:禁用)",
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 1
                 },
                 "updated_at": {
                     "description": "更新时间",
@@ -2556,8 +2560,20 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
+                },
+                "is_leaf": {
+                    "description": "是否子叶",
+                    "type": "boolean"
+                },
                 "is_show": {
                     "type": "boolean"
+                },
+                "level": {
+                    "description": "层级",
+                    "type": "integer"
                 },
                 "name": {
                     "description": "菜单名称",
@@ -2577,10 +2593,6 @@
                 },
                 "sort": {
                     "description": "排序值",
-                    "type": "integer"
-                },
-                "status": {
-                    "description": "状态(1:启用 2:禁用)",
                     "type": "integer"
                 }
             }
@@ -2602,9 +2614,9 @@
         "schema.Role": {
             "type": "object",
             "required": [
+                "is_active",
                 "name",
-                "role_menus",
-                "status"
+                "role_menus"
             ],
             "properties": {
                 "created_at": {
@@ -2618,6 +2630,10 @@
                 "id": {
                     "description": "唯一标识",
                     "type": "string"
+                },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
                 },
                 "memo": {
                     "description": "备注",
@@ -2637,12 +2653,6 @@
                 "sort": {
                     "description": "排序值",
                     "type": "integer"
-                },
-                "status": {
-                    "description": "状态(1:启用 2:禁用)",
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 1
                 },
                 "updated_at": {
                     "description": "更新时间",
@@ -2776,8 +2786,8 @@
             "type": "object",
             "required": [
                 "first_name",
+                "is_active",
                 "last_name",
-                "status",
                 "user_name",
                 "user_roles"
             ],
@@ -2808,6 +2818,10 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
+                },
                 "last_name": {
                     "description": "真实姓名",
                     "type": "string"
@@ -2823,12 +2837,6 @@
                 "real_name": {
                     "description": "真实姓名",
                     "type": "string"
-                },
-                "status": {
-                    "description": "用户状态(1:启用 2:停用)",
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 1
                 },
                 "updated_at": {
                     "description": "创建时间",
@@ -2883,6 +2891,10 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
+                "is_active": {
+                    "description": "状态",
+                    "type": "boolean"
+                },
                 "last_name": {
                     "description": "真实姓",
                     "type": "string"
@@ -2901,10 +2913,6 @@
                     "items": {
                         "$ref": "#/definitions/schema.Role"
                     }
-                },
-                "status": {
-                    "description": "用户状态(1:启用 2:停用)",
-                    "type": "integer"
                 },
                 "user_name": {
                     "description": "用户名",
