# internal/gen/ent/migrate/schema.go
@@ -74,9 +74,9 @@ var (
 		{Name: "crtd_at", Type: field.TypeTime},
 		{Name: "uptd_at", Type: field.TypeTime},
 		{Name: "dltd_at", Type: field.TypeTime, Nullable: true},
+		{Name: "is_active", Type: field.TypeBool, Default: true},
 		{Name: "label", Type: field.TypeString, Size: 128},
 		{Name: "val", Type: field.TypeInt},
-		{Name: "status", Type: field.TypeInt16},
 		{Name: "dict_id", Type: field.TypeString, Size: 36},
 	}
 	// SysDictItemsTable holds the schema information for the "sys_dict_items" table.
@@ -114,6 +114,11 @@ var (
 				Name:    "sysdictitem_dltd_at",
 				Unique:  false,
 				Columns: []*schema.Column{SysDictItemsColumns[6]},
+			},
+			{
+				Name:    "sysdictitem_is_active",
+				Unique:  false,
+				Columns: []*schema.Column{SysDictItemsColumns[7]},
 			},
 		},
 	}
@@ -630,7 +635,6 @@ var (
 		{Name: "is_active", Type: field.TypeBool, Default: true},
 		{Name: "code", Type: field.TypeString, Size: 128},
 		{Name: "name", Type: field.TypeString, Size: 128},
-		{Name: "status", Type: field.TypeInt16, Default: 1},
 	}
 	// XxxDemosTable holds the schema information for the "xxx_demos" table.
 	XxxDemosTable = &schema.Table{
